# conclave-mcp

./: .gitignore  .mcp.json.example  README.md  conclave.py  config.py  eval.py  pyproject.toml  server.py  test_council.py
