[project]
name = "conclave-mcp"
version = "0.2.0"
description = "MCP server providing democratic AI consensus from multiple LLM models. Consult a conclave of frontier models for diverse opinions, peer-ranked evaluations, and synthesized answers."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["mcp", "llm", "conclave", "council", "ai", "claude", "openrouter", "consensus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/stephenpeters/conclave-mcp"
Repository = "https://github.com/stephenpeters/conclave-mcp"

[project.scripts]
conclave-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
